Fix compiler warning in IDBTransaction::modeToString https://bugs.webkit.org/show_bug.cgi?id=113547

Reviewed by Darin Adler.

Not all compilers are smart enough to handle this switch. This patch refactors
modeToString to not return from the default case.

No new tests as this is just a compiler fix.

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::modeToString):


git-svn-id: svn://svn.chromium.org/blink/trunk@147187 bbb929c8-8fbe-4397-9dbb-9b2b20218538