third_party/WebKit/Source/WebCore/Modules/indexeddb/IDBTransaction.cpp
@@ -363,11 +363,10 @@ const AtomicString& IDBTransaction::modeToString(IndexedDB::TransactionMode mode
     case IndexedDB::TransactionVersionChange:
         return IDBTransaction::modeVersionChange();
         break;
-
-    default:
-        ASSERT_NOT_REACHED();
-        return IDBTransaction::modeReadOnly();
     }
+
+    ASSERT_NOT_REACHED();
+    return IDBTransaction::modeReadOnly();
 }
 
 const AtomicString& IDBTransaction::interfaceName() const
